# Deep_Agent_Demystified

./: .gitignore  CLAUDE.md  MEMORY_TYPES.md  README.md  databricks.yml  long_term_memory_agent.py  pyproject.toml  requirements.txt  simple_coding_agent.py
.github/workflows/: databricks-app-deploy.yml
app/: Dockerfile  README.md  app.yaml  docker-compose.yaml  requirements.txt
app/backend/: agent.py  main.py  memory_store.py  requirements.txt
app/backend/src/deep_agent/: __init__.py  clients.py  config.py  main.py  runtime.py
app/backend/src/deep_agent/agent/: backend.py  builder.py  checkpointer.py  model.py  (+2 more)
app/frontend/: index.html  package-lock.json
app/frontend/src/: App.css  App.tsx  api.ts  index.css
app/frontend/src/components/: AgentTopology.module.css  AgentTopology.tsx  ChatArea.module.css  ChatArea.tsx  ExecutionGraph.module.css  ExecutionGraph.tsx  MarkdownRenderer.module.css  MarkdownRenderer.tsx  MemoryPanel.module.css  MemoryPanel.tsx  ThreadSidebar.module.css  ThreadSidebar.tsx  Toast.module.css  Toast.tsx
docs/: DATABRICKS_WORKFLOW_EXECUTION_PLAN.md  DEEP_AGENT_OVERVIEW.md  MEMORY_TYPES.md  Questions.md  deep_agent_architecture.excalidraw
large_tool_results/: toolu_bdrk_011iRTaLWTwTugamV5HPcdwU  toolu_bdrk_01BfqHcHVf5vNhQMNK9UbYJA  toolu_bdrk_01Fot4bZCwrexWft15CBHAxU  toolu_bdrk_01MeE8wbFJkS9twu3oZXMR8s  toolu_bdrk_01MpcYT5CdwHJo1RRFiRGDQj  toolu_bdrk_01UrRK4yDFKhavcPD2PfHdPU  toolu_bdrk_01UtvJrjJX8WdfpmmcDmFwxf  toolu_bdrk_01Y7afvbKbE3eoHeMWcoRCY8
projects/aia-executive-summary-report/: README.md  generate_report.py  report_data.py
skills/aia-claims-analytics/: SKILL.md
skills/aia-customer-analytics/: SKILL.md
skills/aia-distribution-channels/: SKILL.md
skills/aia-policy-underwriting/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/memory-manager/: SKILL.md
skills/research-agent/: SKILL.md
skills/senior-developer/: SKILL.md
workspace_pptx/: build.js  deep-agents-presentation.pptx  package-lock.json  ~$deep-agents-presentation.pptx
workspace_pptx/slides/: slide1.html  slide2.html  slide3.html  slide4.html  slide5.html  slide6.html  slide7.html
(+11 files in other folders)
